--- a/src/main/resources/templates/agregarSuplemento.html
+++ b/src/main/resources/templates/agregarSuplemento.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Agrega Suplemento - ProyectoFinalDWS</title>
+	<title>Agrega Suplemento - Tienda de Suplementos</title>
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
@@ -44,20 +44,9 @@
 						<li class="nav-item">
 							<a class="nav-link active text-white" aria-current="page" th:href="@{/home}">Home</a>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle text-white" href="#" role="button"
-								data-bs-toggle="dropdown" aria-expanded="false">
-								Nutrición
-							</a>
-							<ul class="dropdown-menu">
-								<li><a class="dropdown-item" href="#">Proteínas</a></li>
-								<li><a class="dropdown-item" href="#">Creatina</a></li>
-								<li>
-									<hr class="dropdown-divider">
-								</li>
-								<li><a class="dropdown-item" href="#">Ver Todo</a></li>
-							</ul>
-						</li>
+						<li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" th:href="@{/nutricion/3}">Nutrición</a>
+                        </li>
 						<li class="nav-item">
 							<a class="nav-link text-white" th:href="@{/admin/administracion-usuarios}">Administración</a>
 						</li>
@@ -77,7 +66,7 @@
 				<div class="col">
 					<div class="contenedor">
 						<div class="contenedor-imagen">
-							<img th:src="@{/img/usuarios/profile.jpg}" class="card-img-top imagen" alt="Foto de suplemento genérico"
+							<img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Profile-720.png" class="card-img-top imagen" alt="Foto de suplemento genérico"
 								id="profile-pic">
 						</div>
 						<div class="inputs-form">
@@ -93,7 +82,7 @@
 								</div>
 								<div class="mb-3">
 									<label for="descForm" class="form-label">Descripcion</label>
-									<textarea class="form-control inputVistaEditar" id="descForm" th:field="*{desc_suplemento}" rows="3"
+									<textarea class="form-control inputVistaEditar" id="descForm" th:field="*{desc_suplemento}" rows="3" maxlength="254"
 										required></textarea>
 								</div>
 								<div class="mb-3">
