--- a/src/main/resources/templates/editarUsuario.html
+++ b/src/main/resources/templates/editarUsuario.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Editar Usuario - ProyectoFinalDWS</title>
+	<title>Editar Usuario - Tienda de Suplementos</title>
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
@@ -44,20 +44,9 @@
 						<li class="nav-item">
 							<a class="nav-link active text-white" aria-current="page" th:href="@{/home}">Home</a>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle text-white" href="#" role="button"
-								data-bs-toggle="dropdown" aria-expanded="false">
-								Nutrición
-							</a>
-							<ul class="dropdown-menu">
-								<li><a class="dropdown-item" href="#">Proteínas</a></li>
-								<li><a class="dropdown-item" href="#">Creatina</a></li>
-								<li>
-									<hr class="dropdown-divider">
-								</li>
-								<li><a class="dropdown-item" href="#">Ver Todo</a></li>
-							</ul>
-						</li>
+						<li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" th:href="@{/nutricion/3}">Nutrición</a>
+                        </li>
 						<li class="nav-item">
 							<a class="nav-link text-white" th:href="@{/admin/administracion-usuarios}">Administración</a>
 						</li>
@@ -79,7 +68,7 @@
 						<div class="contenedor-imagen">
 							<img th:if="${usuarioDTO.getImagen_usuario() != null}" th:src="'data:image/png;base64, '+ ${usuarioDTO.getImagen_usuario()}" class="card-img-top imagen" alt="Foto de perfil del usuario"
 								id="profile-pic">
-							<img th:if="${usuarioDTO.getImagen_usuario() == null}" th:src="@{/img/usuarios/profile.jpg}" class="card-img-top imagen" alt="Foto de perfil del usuario"
+							<img th:if="${usuarioDTO.getImagen_usuario() == null}" src="https://upload.wikimedia.org/wikipedia/commons/4/41/Profile-720.png" class="card-img-top imagen" alt="Foto de perfil del usuario"
 								id="profile-pic">
 						</div>
 						<div class="inputs-form">
