--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Perfil - ProyectoFinalDIW</title>
+	<title>Perfil - Tienda de Suplementos</title>
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
@@ -41,20 +41,9 @@
 						<li class="nav-item">
 							<a class="nav-link active text-white" aria-current="page" th:href="@{/home}">Home</a>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle text-white" href="#" role="button"
-								data-bs-toggle="dropdown" aria-expanded="false">
-								Nutrición
-							</a>
-							<ul class="dropdown-menu">
-								<li><a class="dropdown-item" href="#">Proteínas</a></li>
-								<li><a class="dropdown-item" href="#">Creatina</a></li>
-								<li>
-									<hr class="dropdown-divider">
-								</li>
-								<li><a class="dropdown-item" href="#">Ver Todo</a></li>
-							</ul>
-						</li>
+						<li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" th:href="@{/nutricion/3}">Nutrición</a>
+                        </li>
 						<li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
 							<a class="nav-link text-white" th:href="@{/admin/administracion-usuarios}">Administración</a>
 						</li>
@@ -73,8 +62,8 @@
 			<div class="row" style="margin-top: 25px;">
 				<div class="col">
 					<div class="divContenedorPerfil ">
-						<img th:if="${usuarioDTO.getRutaImagen_usuario() == null}" src="https://upload.wikimedia.org/wikipedia/commons/4/41/Profile-720.png" class="img-fluid imagenPerfil" alt="dwa">
-						<img th:if="${usuarioDTO.getRutaImagen_usuario() != null}" th:src="${usuarioDTO.getRutaImagen_usuario()}" class="img-fluid imagenPerfil" alt="dwa">
+						<img th:if="${usuarioDTO.getImagen_usuario() == null}" src="https://upload.wikimedia.org/wikipedia/commons/4/41/Profile-720.png" class="img-fluid imagenPerfil" alt="dwa">
+						<img th:if="${usuarioDTO.getImagen_usuario() != null}" th:src="'data:image/png;base64, '+ ${usuarioDTO.getImagen_usuario()}" class="img-fluid imagenPerfil" alt="dwa">
 						<h2 class="nombrePerfil" th:text="${usuarioDTO.getNombre_usuario()}">Francisco José</h2>
 						<a class="btn btn-primary botonVolverPerfil" th:href="@{/logout}">Cerrar sesión</a>
 					</div>
