--- a/src/main/resources/templates/suplementos.html
+++ b/src/main/resources/templates/suplementos.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Home - Tienda de Suplementos</title>
+	<title>Nutrición - Tienda de Suplementos</title>
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
@@ -14,7 +14,7 @@
 		asp-append-version="true"></script>
 	<!-- Fin Bootstrap -->
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/style.css" asp-append-version="true" />
+	<link rel="stylesheet" th:href="@{/css/style.css}" asp-append-version="true" />
 	<!-- Fin CSS -->
 	<!-- Font awesome -->
 	<link
@@ -28,7 +28,7 @@
 		<nav class="navbar navbar-expand-lg"
 			style="background: linear-gradient(90deg, rgba(141,148,241,1) 0%, rgba(157,141,241,1) 49%, rgba(181,141,241,1) 100%);;">
 			<div class="container-fluid">
-				<img src="img/logo2.png" alt="Logo" width="40" height="40"
+				<img th:src="@{/img/logo2.png}" alt="Logo" width="40" height="40"
 					class="d-inline-block align-text-top">
 				<a class="navbar-brand text-white nombreTiendaSuplementos">Tienda de Suplementos</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -59,67 +59,52 @@
 	
 	<div class="container">
 		<main role="main" class="pb-3">
-			<!-- Carousel -->
-			<div class="row" style="margin-top: 50px;">
-				<div class="col">
-					<div id="carouselExampleIndicators" class="carousel slide">
-						<div class="carousel-indicators">
-							<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-								class="active" aria-current="true" aria-label="Slide 1"></button>
-							<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-								aria-label="Slide 2"></button>
-							<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-								aria-label="Slide 3"></button>
-						</div>
-						<div class="carousel-inner">
-							<div class="carousel-item active">
-								<img src="img/carouselFoto4.jpg" class="d-block w-100" alt="fotoSuplementos">
-							</div>
-							<div class="carousel-item">
-								<img src="img/carouselFoto5.jpg" class="d-block w-100" alt="fotoSuplementos">
-							</div>
-							<div class="carousel-item">
-								<img src="img/carouselFoto6.jpg" class="d-block w-100" alt="fotoSuplementos">
-							</div>
-						</div>
-						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-							data-bs-slide="prev">
-							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							<span class="visually-hidden">Previous</span>
-						</button>
-						<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-							data-bs-slide="next">
-							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="visually-hidden">Next</span>
-						</button>
-					</div>
-				</div>
-			</div>
-			<!-- Fin Carousel -->
-
-			<!-- Productos Recomendados -->
-			<div th:if="${listaSuplementosDTO.size() > 0}" class="row" style="margin-bottom: 20px">
-				<div class="col-12" style="font-size: 30px; font-weight: 600; text-align: center; margin: 30px 0;">
-					<i class="fa-solid fa-thumbs-up" style="color: rgba(141,148,241,1);"></i>
-					PRODUCTOS RECOMENDADOS
-				</div>
+			<!-- Suplementos -->
+			<div th:if="${listaSuplementosDTO.size() > 0}" class="row" style="margin-top: 80px">
 				<div class="col-12">
 					<div class="row">
-						<!-- Card -->
+						<!-- Dropdown Filtrar suplemento -->
+						<div class="dropdown" style="margin-bottom: 15px">
+							<button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+								aria-expanded="false">
+								Filtrar por
+							</button>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" th:href="@{/nutricion/1}">Proteína</a></li>
+								<li><a class="dropdown-item" th:href="@{/nutricion/2}">Creatina</a></li>
+								<li>
+									<hr class="dropdown-divider">
+								</li>
+								<li><a class="dropdown-item" th:href="@{/nutricion/3}">Ver todo</a></li>
+							</ul>
+						</div>
+						<!-- Fin Dropdown Filtrar suplemento -->
+			
+						<!-- Cards Suplementos -->
 						<div th:each="suplemento: ${listaSuplementosDTO}" class="col-lg-2 col-md-3 col-sm-4 col-6">
 							<div class="card">
-								<img th:src="'data:image/png;base64, '+ ${suplemento.getImagen_suplemento()}" class="card-img-top" th:alt="${suplemento.getNombre_suplemento()}">
+								<img th:src="'data:image/png;base64, ' + ${suplemento.getImagen_suplemento()}" class="card-img-top"
+									th:alt="${suplemento.getNombre_suplemento()}" style="max-height: 200px">
 								<div class="card-body">
 									<h5 class="card-title" th:text="${suplemento.getNombre_suplemento()}"></h5>
-									<p class="card-text" th:text="${suplemento.getDesc_suplemento()}"></p>
+									<p class="card-text" th:text="${suplemento.getDesc_suplemento().substring(0, 50)} + ..."></p>
+									<a href="#" class="btn btn-primary">Añadir al carrito</a>
 								</div>
 							</div>
 						</div>
-						<!-- Fin Card -->
+						<!-- Fin Cards Suplementos -->
 					</div>
 				</div>
 			</div>
-			<!-- Fin Productos Recomendados -->
+			<!-- Fin Suplementos -->
+			
+			<!-- No existe Suplemento -->
+			<div th:if="${listaSuplementosDTO.size() == 0}" class="row" style="margin-top: 80px">
+				<div class="col-12">
+					<h3>No existe ningún suplemento todavía.</h3>
+				</div>
+			</div>
+			<!-- Fin No existe Suplemento -->
 		</main>
 	</div>
 </body>
