--- a/src/main/resources/templates/carrito.html
+++ b/src/main/resources/templates/carrito.html
@@ -71,39 +71,46 @@
 		<main role="main" class="pb-3">
 			<div class="row tablaAdmin">
 				<div class="col">
-					<!-- Tabla -->
-					<table class="table table-dark table-hover text-center">
-						<thead>
-							<tr>
-								<th scope="col">#</th>
-								<th scope="col">Suplemento</th>
-								<th scope="col">Cantidad</th>
-								<th scope="col">Precio unidad</th>
-								<th scope="col">Eliminar</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:if="${listaCarritoDTO != null && listaCarritoDTO.size() == 0}">
-								<td colspan="5" style="text-align: center">No existe ningún suplemento añadido al carrito.</td>
-							</tr>
-							<tr th:each="carritoDTO: ${listaCarritoDTO}">
-								<th scope="row"><img th:src="'data:image/png;base64, '+ ${carritoDTO.getSuplementoDTO().getImagen_suplemento()}" class="img-fluid" style="max-width: 80px; max-height: 80px;" th:alt="${carritoDTO.getSuplementoDTO().getNombre_suplemento()}"></th>
-								<td th:text="${carritoDTO.getSuplementoDTO().getNombre_suplemento()}"></td>
-								<td th:text="${carritoDTO.getCantidad()}"></td>
-								<td th:text="${carritoDTO.getSuplementoDTO().getPrecio_suplemento()} + '$'"></td>
-								<td>
-									<i class="fa-solid fa-trash" style="color: red; cursor: pointer;" 
-										th:attr="data-idCarrito=${carritoDTO.getId_carrito()}" 
-										onclick="compruebaEliminar(event)"></i>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<!-- Fin Tabla -->
-					
-					<!-- Boton comprar -->
-					<button class="btn btn-primary" style="float: right;">Comprar</button>
-					<!-- Fin Boton comprar -->
+					<!-- Formulario -->
+					<form method="post" th:action="@{/comprar}">
+						<!-- Tabla -->
+						<table class="table table-dark table-hover text-center">
+							<thead>
+								<tr>
+									<th scope="col">#</th>
+									<th scope="col">Suplemento</th>
+									<th scope="col">Cantidad</th>
+									<th scope="col">Precio unidad</th>
+									<th scope="col">Eliminar</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:if="${listaCarritoDTO != null && listaCarritoDTO.size() == 0}">
+									<td colspan="5" style="text-align: center">No existe ningún suplemento añadido al carrito.</td>
+								</tr>
+								<tr th:each="carritoDTO: ${listaCarritoDTO}">
+									<th scope="row"><img th:src="'data:image/png;base64, '+ ${carritoDTO.getSuplementoDTO().getImagen_suplemento()}" class="img-fluid" style="max-width: 80px; max-height: 80px;" th:alt="${carritoDTO.getSuplementoDTO().getNombre_suplemento()}"></th>
+									<td th:text="${carritoDTO.getSuplementoDTO().getNombre_suplemento()}"></td>
+									<td th:text="${carritoDTO.getCantidad()}"></td>
+									<td th:text="${carritoDTO.getSuplementoDTO().getPrecio_suplemento()} + '$'"></td>
+									<td>
+										<i class="fa-solid fa-trash" style="color: red; cursor: pointer;" 
+											th:attr="data-idCarrito=${carritoDTO.getId_carrito()}" 
+											onclick="compruebaEliminar(event)"></i>
+									</td>
+								</tr>
+								<tr th:if="${listaCarritoDTO != null && listaCarritoDTO.size() > 0}">
+									<td colspan="5" style="text-align: right; padding-right: 30px;">Precio total: <input name="total" th:value="${precioTotal}"></td>
+								</tr>
+							</tbody>
+						</table>
+						<!-- Fin Tabla -->
+						
+						<!-- Boton comprar -->
+						<button class="btn btn-primary" style="float: right;">Comprar</button>
+						<!-- Fin Boton comprar -->
+					</form>
+					<!-- Fin Formulario -->
 				</div>
 			</div>
 		</main>
