--- a/src/main/resources/templates/carrito.html
+++ b/src/main/resources/templates/carrito.html
@@ -107,7 +107,7 @@
 						<!-- Fin Tabla -->
 						
 						<!-- Boton comprar -->
-						<button class="btn btn-primary" style="float: right;">Comprar</button>
+						<button th:if="${listaCarritoDTO != null && listaCarritoDTO.size() > 0}" class="btn btn-primary" style="float: right;">Comprar</button>
 						<!-- Fin Boton comprar -->
 					</form>
 					<!-- Fin Formulario -->
